--- a/.github/workflows/docker-ecr-scan.yml
+++ b/.github/workflows/docker-ecr-scan.yml
@@ -42,21 +42,35 @@ jobs:
             --image-id imageTag=$IMAGE_TAG
 
       - name: Wait for ECR scan to complete
-        run: echo "Hello, world!"
+        run: |
+          IMAGE_TAG=${{ github.sha }}
+          echo "[DEBUG] Waiting for ECR scan to complete for image tag: $IMAGE_TAG"
+          for i in {1..12}; do
+            STATUS=$(aws ecr describe-image-scan-findings \
+              --repository-name ${{ secrets.ECR_REPOSITORY }} \
+              --image-id imageTag=$IMAGE_TAG \
+              --query 'imageScanStatus.status' --output text)
+            echo "[DEBUG] Scan status: $STATUS (attempt $i)"
+            if [ "$STATUS" = "COMPLETE" ]; then
+              break
+            fi
+            sleep 10
+          done
+          if [ "$STATUS" != "COMPLETE" ]; then
+            echo "❌ Scan did not complete in time."
+            exit 1
+          fi
 
       - name: Check ECR scan findings
         run: |
           IMAGE_TAG=${{ github.sha }}
           echo "[DEBUG] Checking scan findings for image tag: $IMAGE_TAG"
-          echo "[DEBUG] Running describe-image-scan-findings..."
           RAW_OUTPUT=$(aws ecr describe-image-scan-findings \
             --repository-name ${{ secrets.ECR_REPOSITORY }} \
             --image-id imageTag=$IMAGE_TAG \
             --output json 2>&1) || true
           echo "[DEBUG] Raw AWS CLI output:"
           echo "$RAW_OUTPUT"
-          
-          # Try to extract findings (if possible)
           HIGH_COUNT=$(aws ecr describe-image-scan-findings \
             --repository-name ${{ secrets.ECR_REPOSITORY }} \
             --image-id imageTag=$IMAGE_TAG \
