--- a/.github/workflows/docker-ecr-scan.yml
+++ b/.github/workflows/docker-ecr-scan.yml
@@ -48,6 +48,42 @@ jobs:
           docker tag ${{ secrets.ECR_REPOSITORY }}:$IMAGE_TAG ${{ steps.login-ecr.outputs.registry }}/${{ secrets.ECR_REPOSITORY }}:$IMAGE_TAG
           docker push ${{ steps.login-ecr.outputs.registry }}/${{ secrets.ECR_REPOSITORY }}:$IMAGE_TAG
 
-      # Add your deployment step here if needed, e.g.:
-      # - name: Deploy to ECS
-      #   run: ... (your deployment script) 
+      - name: Install ArgoCD CLI
+        run: |
+          curl -sSL -o argocd-linux-amd64 https://github.com/argoproj/argo-cd/releases/latest/download/argocd-linux-amd64
+          install -m 555 argocd-linux-amd64 /usr/local/bin/argocd
+          rm argocd-linux-amd64
+
+      - name: Login to ArgoCD
+        run: |
+          argocd login ${{ secrets.ARGOCD_SERVER }} \
+            --username ${{ secrets.ARGOCD_USERNAME }} \
+            --password ${{ secrets.ARGOCD_PASSWORD }} \
+            --insecure
+
+      - name: Deploy to EKS via ArgoCD
+        run: |
+          IMAGE_TAG=${{ github.sha }}
+          FULL_IMAGE_REF="${{ steps.login-ecr.outputs.registry }}/${{ secrets.ECR_REPOSITORY }}:$IMAGE_TAG"
+          
+          # Update the ArgoCD application with new image
+          argocd app set ${{ secrets.ARGOCD_APP_NAME }} \
+            --image $FULL_IMAGE_REF \
+            --insecure
+          
+          # Sync the application
+          argocd app sync ${{ secrets.ARGOCD_APP_NAME }} \
+            --insecure \
+            --timeout 300
+          
+          # Wait for sync to complete
+          argocd app wait ${{ secrets.ARGOCD_APP_NAME }} \
+            --insecure \
+            --timeout 600 \
+            --health
+
+      - name: Verify deployment
+        run: |
+          echo "✅ Deployment completed successfully!"
+          echo "Image deployed: ${{ steps.login-ecr.outputs.registry }}/${{ secrets.ECR_REPOSITORY }}:${{ github.sha }}"
+          echo "ArgoCD App: ${{ secrets.ARGOCD_APP_NAME }}" 
