--- a/.github/workflows/docker-ecr-scan.yml
+++ b/.github/workflows/docker-ecr-scan.yml
@@ -21,7 +21,6 @@ jobs:
         uses: aws-actions/configure-aws-credentials@v4
         with:
           role-to-assume: arn:aws:iam::334645279807:role/terraform
-
           aws-region: ap-south-1
 
       - name: Build Docker image
@@ -48,6 +47,17 @@ jobs:
           docker tag ${{ secrets.ECR_REPOSITORY }}:$IMAGE_TAG ${{ steps.login-ecr.outputs.registry }}/${{ secrets.ECR_REPOSITORY }}:$IMAGE_TAG
           docker push ${{ steps.login-ecr.outputs.registry }}/${{ secrets.ECR_REPOSITORY }}:$IMAGE_TAG
 
+      - name: Get ArgoCD credentials from AWS Secrets Manager
+        id: get_argocd_secrets
+        run: |
+          SECRET_JSON=$(aws secretsmanager get-secret-value --secret-id argocd/credentials --region ap-south-1 --query SecretString --output text)
+          echo "ARGOCD_SERVER=$(echo $SECRET_JSON | jq -r .ARGOCD_SERVER)" >> $GITHUB_ENV
+          echo "ARGOCD_USERNAME=$(echo $SECRET_JSON | jq -r .ARGOCD_USERNAME)" >> $GITHUB_ENV
+          echo "ARGOCD_PASSWORD=$(echo $SECRET_JSON | jq -r .ARGOCD_PASSWORD)" >> $GITHUB_ENV
+          echo "ARGOCD_APP_NAME=$(echo $SECRET_JSON | jq -r .ARGOCD_APP_NAME)" >> $GITHUB_ENV
+        env:
+          AWS_REGION: ap-south-1
+
       - name: Install ArgoCD CLI
         run: |
           curl -sSL -o argocd-linux-amd64 https://github.com/argoproj/argo-cd/releases/latest/download/argocd-linux-amd64
@@ -56,34 +66,21 @@ jobs:
 
       - name: Login to ArgoCD
         run: |
-          argocd login ${{ secrets.ARGOCD_SERVER }} \
-            --username ${{ secrets.ARGOCD_USERNAME }} \
-            --password ${{ secrets.ARGOCD_PASSWORD }} \
+          argocd login $ARGOCD_SERVER \
+            --username $ARGOCD_USERNAME \
+            --password $ARGOCD_PASSWORD \
             --insecure
 
       - name: Deploy to EKS via ArgoCD
         run: |
           IMAGE_TAG=${{ github.sha }}
           FULL_IMAGE_REF="${{ steps.login-ecr.outputs.registry }}/${{ secrets.ECR_REPOSITORY }}:$IMAGE_TAG"
-          
-          # Update the ArgoCD application with new image
-          argocd app set ${{ secrets.ARGOCD_APP_NAME }} \
-            --image $FULL_IMAGE_REF \
-            --insecure
-          
-          # Sync the application
-          argocd app sync ${{ secrets.ARGOCD_APP_NAME }} \
-            --insecure \
-            --timeout 300
-          
-          # Wait for sync to complete
-          argocd app wait ${{ secrets.ARGOCD_APP_NAME }} \
-            --insecure \
-            --timeout 600 \
-            --health
+          argocd app set $ARGOCD_APP_NAME --image $FULL_IMAGE_REF --insecure
+          argocd app sync $ARGOCD_APP_NAME --insecure --timeout 300
+          argocd app wait $ARGOCD_APP_NAME --insecure --timeout 600 --health
 
       - name: Verify deployment
         run: |
           echo "✅ Deployment completed successfully!"
           echo "Image deployed: ${{ steps.login-ecr.outputs.registry }}/${{ secrets.ECR_REPOSITORY }}:${{ github.sha }}"
-          echo "ArgoCD App: ${{ secrets.ARGOCD_APP_NAME }}" 
+          echo "ArgoCD App: $ARGOCD_APP_NAME" 
