--- a/.github/workflows/docker-ecr-scan.yml
+++ b/.github/workflows/docker-ecr-scan.yml
@@ -6,8 +6,7 @@ on:
 
 permissions:
   id-token: write # This is required for requesting the JWT
-  contents: read  # This is required for actions/checkout
-
+  contents: write  # Needed to push manifest changes
 
 jobs:
   build-and-push:
@@ -16,6 +15,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
@@ -58,6 +59,22 @@ jobs:
         env:
           AWS_REGION: ap-south-1
 
+      - name: Install yq
+        run: |
+          sudo wget -O /usr/local/bin/yq https://github.com/mikefarah/yq/releases/latest/download/yq_linux_amd64
+          sudo chmod +x /usr/local/bin/yq
+
+      - name: Update image tag in deployment.yaml
+        run: |
+          IMAGE_TAG=${{ github.sha }}
+          REGISTRY=${{ steps.login-ecr.outputs.registry }}
+          yq e '.spec.template.spec.containers[0].image = "'${REGISTRY}/${{ secrets.ECR_REPOSITORY }}:${IMAGE_TAG}'"' -i k8s/deployment.yaml
+          git config --global user.email "ci-bot@example.com"
+          git config --global user.name "ci-bot"
+          git add k8s/deployment.yaml
+          git commit -m "Update image tag to ${IMAGE_TAG} [ci skip]"
+          git push origin main
+
       - name: Install ArgoCD CLI
         run: |
           curl -sSL -o argocd-linux-amd64 https://github.com/argoproj/argo-cd/releases/latest/download/argocd-linux-amd64
@@ -73,14 +90,10 @@ jobs:
 
       - name: Deploy to EKS via ArgoCD
         run: |
-          IMAGE_TAG=${{ github.sha }}
-          FULL_IMAGE_REF="${{ steps.login-ecr.outputs.registry }}/${{ secrets.ECR_REPOSITORY }}:$IMAGE_TAG"
-          argocd app set $ARGOCD_APP_NAME --image $FULL_IMAGE_REF --insecure
           argocd app sync $ARGOCD_APP_NAME --insecure --timeout 300
           argocd app wait $ARGOCD_APP_NAME --insecure --timeout 600 --health
 
       - name: Verify deployment
         run: |
           echo "✅ Deployment completed successfully!"
-          echo "Image deployed: ${{ steps.login-ecr.outputs.registry }}/${{ secrets.ECR_REPOSITORY }}:${{ github.sha }}"
           echo "ArgoCD App: $ARGOCD_APP_NAME" 
