--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: flask-app
 spec:
-  replicas: 3
+  replicas: 2
   selector:
     matchLabels:
       app: flask-app
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
       - name: flask-app
-        image: <your-ecr-repo>:<tag>
+        image: 334645279807.dkr.ecr.ap-south-1.amazonaws.com/docker-ecr:latest
         ports:
         - containerPort: 5000
